@@ -1,3 +1,7 @@
+2012-02-06:
+	* (seebs) Merge O_LARGEFILE into flags, not mode (thanks to Lei
+	  Liu at Wind River for the fix).
+
 2011-05-31:
 	* (seebs) Don't mask in 0100 to filesystem modes for things which
 	  are not actually directories, because this breaks the special
